# rail_manipulation_msgs

./: .travis.yml  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
action/: Gripper.action  Primitive.action  Recognize.action  RecognizeAll.action  RecognizeObject.action  RecognizeObjectByName.action  RecognizeObjects.action  RecognizeSegmentedObject.action  RecognizeSegmentedObjectByName.action
msg/: Grasp.msg  SegmentedObject.msg  SegmentedObjectList.msg
